responsive spacing fixes

--- a/style.css
+++ b/style.css
@@ -449,7 +449,7 @@ textarea {
 
 .info_container {
     padding-top: 5vh;
-    padding-bottom: 15vh;
+    padding-bottom: 5vh;
     margin-left: 10%;
     margin-right: 10%;
     display: grid;
@@ -698,7 +698,14 @@ embed {
         padding-right: 0.5em;
     }
     .info_container{
-        grid-template-columns: 50% 50%;
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+        padding-bottom: 0;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;
     }
     .two_column{
         grid-template-columns: 100%;
